mla_bwd/bug.txt
root@tjzj-inf-sci-k8s-bzz2-0203:/home/users/chenquanlin/workspace/operator/test_operator/mla_bwd# rm -rf build *.so && MAX_JOBS=192 python setup.py build_ext --inplace 2>&1 | tail -n 100
                module.to(
                ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(158): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                module.to(detail::py_object_to_dtype(object), non_blocking);
                ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(169): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                  module.to(detail::py_object_to_dtype(dtype), non_blocking);
                  ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(171): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                  module.to(detail::py_object_to_device(device), non_blocking);
                  ^

/usr/local/lib/python3.12/dist-packages/torch/include/torch/csrc/api/include/torch/python.h(173): warning #3189-D: "module" is parsed as an identifier rather than a keyword because the tokens that follow it do not match those of a preprocessor directive
                  module.to(
                  ^

/home/users/chenquanlin/workspace/operator/test_operator/mla_bwd/mla_bwd.cu(480): warning #177-D: variable "dQ_NOPE_COLS" was declared but never referenced
              constexpr int dQ_NOPE_COLS = D_V;
                            ^

/home/users/chenquanlin/workspace/operator/test_operator/mla_bwd/mla_bwd.cu(481): warning #177-D: variable "dQ_ROPE_COLS" was declared but never referenced
              constexpr int dQ_ROPE_COLS = D_ROPE;
                            ^

/home/users/chenquanlin/workspace/operator/test_operator/mla_bwd/mla_bwd.cu(118): warning #177-D: variable "lane_idx" was declared but never referenced
      const int lane_idx = threadIdx.x % 32;
                ^

/home/users/chenquanlin/workspace/operator/FlashMLA/csrc/cutlass/include/cute/atom/mma_traits_sm100.hpp(294): error: static assertion failed with "Not a canonical UMMA_K Layout: Expected stride failure."
      static_assert(stride_00 == expected_stride_00, "Not a canonical UMMA_K Layout: Expected stride failure.");
      ^
          detected during:
            instantiation of "cute::UMMA::SmemDescriptor cute::UMMA::make_umma_desc<MajorMode,TEngine,TLayout>(const cute::Tensor<TEngine, TLayout> &) [with MajorMode=cute::UMMA::Major::K, TEngine=cute::ViewEngine<cute::smem_ptr<test_operator::mla_bwd::bf16 *>>, TLayout=cute::Layout<cute::tuple<cute::tuple<cute::_8, cute::_8>, cute::_16>, cute::tuple<cute::tuple<cute::_1, cute::_512>, cute::_8>>]" at line 28 of /home/users/chenquanlin/workspace/operator/FlashMLA/csrc/kerutils/include/kerutils/device/sm100/helpers.cuh
            instantiation of "void kerutils::utcmma_ss(TiledMMA &, TensorA, TensorB, TensorFragC, __nv_bool) [with TiledMMA=test_operator::mla_bwd::TiledMMA_dQ, TensorA=cute::Tensor<cute::ViewEngine<cute::smem_ptr<test_operator::mla_bwd::bf16 *>>, cute::Layout<cute::tuple<cute::tuple<cute::_8, cute::_8>, cute::_64>, cute::tuple<cute::tuple<cute::_1, cute::_512>, cute::_8>>>, TensorB=cute::Tensor<cute::ViewEngine<cute::swizzle_ptr<cute::Swizzle<3, 4, 3>, cute::smem_ptr<test_operator::mla_bwd::bf16 *>>>, cute::Layout<cute::tuple<cute::tuple<cute::_64, cute::_4>, cute::C<32>>, cute::tuple<cute::tuple<cute::_1, cute::_2048>, cute::_64>>>, TensorFragC=cute::Tensor<cute::ViewEngine<cute::tmem_ptr<float>>, cute::Layout<cute::tuple<cute::tuple<cute::_64, cute::tuple<cute::_128, cute::C<2>>>, cute::_1, cute::_1>, cute::tuple<cute::tuple<cute::C<65536>, cute::tuple<cute::_1, cute::C<4194304>>>, cute::C<0>, cute::C<0>>>>]" at line 1070 of /home/users/chenquanlin/workspace/operator/test_operator/mla_bwd/mla_bwd.cu

/home/users/chenquanlin/workspace/operator/FlashMLA/csrc/kerutils/include/kerutils/device/sm100/helpers.cuh(30): error: static assertion failed
      static_assert(size<2>(sA_frag) == size<2>(sB_frag));
      ^
          detected during instantiation of "void kerutils::utcmma_ss(TiledMMA &, TensorA, TensorB, TensorFragC, __nv_bool) [with TiledMMA=test_operator::mla_bwd::TiledMMA_dQ, TensorA=cute::Tensor<cute::ViewEngine<cute::smem_ptr<test_operator::mla_bwd::bf16 *>>, cute::Layout<cute::tuple<cute::tuple<cute::_8, cute::_8>, cute::_64>, cute::tuple<cute::tuple<cute::_1, cute::_512>, cute::_8>>>, TensorB=cute::Tensor<cute::ViewEngine<cute::swizzle_ptr<cute::Swizzle<3, 4, 3>, cute::smem_ptr<test_operator::mla_bwd::bf16 *>>>, cute::Layout<cute::tuple<cute::tuple<cute::_64, cute::_4>, cute::C<32>>, cute::tuple<cute::tuple<cute::_1, cute::_2048>, cute::_64>>>, TensorFragC=cute::Tensor<cute::ViewEngine<cute::tmem_ptr<float>>, cute::Layout<cute::tuple<cute::tuple<cute::_64, cute::tuple<cute::_128, cute::C<2>>>, cute::_1, cute::_1>, cute::tuple<cute::tuple<cute::C<65536>, cute::tuple<cute::_1, cute::C<4194304>>>, cute::C<0>, cute::C<0>>>>]" at line 1070 of /home/users/chenquanlin/workspace/operator/test_operator/mla_bwd/mla_bwd.cu

/home/users/chenquanlin/workspace/operator/FlashMLA/csrc/kerutils/include/kerutils/device/sm100/helpers.cuh(30): error: static assertion failed
      static_assert(size<2>(sA_frag) == size<2>(sB_frag));
      ^
          detected during instantiation of "void kerutils::utcmma_ss(TiledMMA &, TensorA, TensorB, TensorFragC, __nv_bool) [with TiledMMA=test_operator::mla_bwd::TiledMMA_dQ_RoPE, TensorA=cute::Tensor<cute::ViewEngine<cute::smem_ptr<test_operator::mla_bwd::bf16 *>>, cute::Layout<cute::tuple<cute::tuple<cute::_8, cute::_8>, cute::_64>, cute::tuple<cute::tuple<cute::_1, cute::_512>, cute::_8>>>, TensorB=cute::Tensor<cute::ViewEngine<cute::swizzle_ptr<cute::Swizzle<3, 4, 3>, cute::smem_ptr<test_operator::mla_bwd::bf16 *>>>, cute::Layout<cute::tuple<cute::C<64>, cute::C<32>>, cute::tuple<cute::_1, cute::C<64>>>>, TensorFragC=cute::Tensor<cute::ViewEngine<cute::tmem_ptr<float>>, cute::Layout<cute::tuple<cute::tuple<cute::_64, cute::tuple<cute::_32, cute::_2>>, cute::_1, cute::_1>, cute::tuple<cute::tuple<cute::C<65536>, cute::tuple<cute::_1, cute::C<4194304>>>, cute::C<0>, cute::C<0>>>>]" at line 1094 of /home/users/chenquanlin/workspace/operator/test_operator/mla_bwd/mla_bwd.cu

3 errors detected in the compilation of "/home/users/chenquanlin/workspace/operator/test_operator/mla_bwd/mla_bwd.cu".
ninja: build stopped: subcommand failed.
Traceback (most recent call last):
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 2557, in _run_ninja_build
    subprocess.run(
  File "/usr/lib/python3.12/subprocess.py", line 571, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['ninja', '-v', '-j', '192']' returned non-zero exit status 1.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/users/chenquanlin/workspace/operator/test_operator/mla_bwd/setup.py", line 73, in <module>
    setup(
  File "/usr/local/lib/python3.12/dist-packages/setuptools/__init__.py", line 117, in setup
    return distutils.core.setup(**attrs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/core.py", line 186, in setup
    return run_commands(dist)
           ^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/core.py", line 202, in run_commands
    dist.run_commands()
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/dist.py", line 1002, in run_commands
    self.run_command(cmd)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/dist.py", line 1104, in run_command
    super().run_command(command)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/dist.py", line 1021, in run_command
    cmd_obj.run()
  File "/usr/local/lib/python3.12/dist-packages/setuptools/command/build_ext.py", line 99, in run
    _build_ext.run(self)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/command/build_ext.py", line 368, in run
    self.build_extensions()
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 1052, in build_extensions
    build_ext.build_extensions(self)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/command/build_ext.py", line 484, in build_extensions
    self._build_extensions_serial()
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/command/build_ext.py", line 510, in _build_extensions_serial
    self.build_extension(ext)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/command/build_ext.py", line 264, in build_extension
    _build_ext.build_extension(self, ext)
  File "/usr/local/lib/python3.12/dist-packages/Cython/Distutils/build_ext.py", line 136, in build_extension
    super().build_extension(ext)
  File "/usr/local/lib/python3.12/dist-packages/setuptools/_distutils/command/build_ext.py", line 565, in build_extension
    objects = self.compiler.compile(
              ^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 836, in unix_wrap_ninja_compile
    _write_ninja_file_and_compile_objects(
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 2209, in _write_ninja_file_and_compile_objects
    _run_ninja_build(
  File "/usr/local/lib/python3.12/dist-packages/torch/utils/cpp_extension.py", line 2574, in _run_ninja_build
    raise RuntimeError(message) from e
RuntimeError: Error compiling objects for extension
